# travel-skill

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
cities/: README.md  amsterdam.json  barcelona.json  berlin.json  brussels.json  budapest.json  chicago.json  copenhagen.json  dubai.json  dublin.json  helsinki.json  hong-kong.json  israel.json  jakarta.json  kochi.json  kuala-lumpur.json  lisbon.json  london.json  los-angeles.json  madrid.json  manila.json  mexico-city.json  milan.json  munich.json  new-york.json  oslo.json  paris.json  porto.json  prague.json  rome.json  san-francisco.json  singapore.json  taipei.json  tokyo.json  toronto.json  vienna.json  warsaw.json  washington-dc.json
scripts/: setup-gtfs.sh
src/travel_mcp/: __init__.py  flights.py  server.py
src/travel_mcp/airbnb/: __init__.py  scraper.py  tools.py
src/travel_mcp/hotels/: core.py  local_playwright.py  primp.py  tools.py
src/travel_mcp/transit/: __init__.py  config.travel.json  loader.py  proxy.py
